--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
-  <link rel="stylesheet" href="styles.css">
-  <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
+    <link rel="stylesheet" href="styles.css">
+    <title></title>
 </head>
+
 <body>
-<h1>TIL: Today I learned</h1>
-<p class="about">A blog about what we learn each day at EDA</p>
-<div class="getty embed image" style="background-color:#fff;display:inline-block;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;color:#a7a7a7;font-size:11px;width:100%;max-width:507px;"><div style="padding:0;margin:0;text-align:left;"><a href="http://www.gettyimages.com/detail/488585333" target="_blank" style="color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;">Embed from Getty Images</a></div><div style="overflow:hidden;position:relative;height:0;padding:66.666667% 0 0 0;width:100%;"><iframe src="//embed.gettyimages.com/embed/488585333?et=riqHddMRRpRk0phfsmbWTA&viewMoreLink=off&sig=IKnrf4aoYhux9G5aiZaGpDq9qSvNRZMkXgdsOLSSVc4=" width="507" height="338" scrolling="no" frameborder="0" style="display:inline-block;position:absolute;top:0;left:0;width:100%;height:100%;margin:0;"></iframe></div><p style="margin:0;"></p></div>
-<ul>
-  <a href="/posts"><button>Read new TIL blogs</button></a>
-  <a href="/new.html"><button>Create a new TIL blog</button></a>
-</ul>
+    <h1>TIL: Today I learned</h1>
+    <p class="about">A blog about what we learn each day at EDA</p>
+    <div class="getty embed image" style="background-color:#fff;display:inline-block;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;color:#a7a7a7;font-size:11px;width:100%;max-width:507px;">
+        <div style="padding:0;margin:0;text-align:left;"><a href="http://www.gettyimages.com/detail/488585333" target="_blank" style="color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;">Embed from Getty Images</a></div>
+        <div style="overflow:hidden;position:relative;height:0;padding:66.666667% 0 0 0;width:100%;">
+            <iframe src="//embed.gettyimages.com/embed/488585333?et=riqHddMRRpRk0phfsmbWTA&viewMoreLink=off&sig=IKnrf4aoYhux9G5aiZaGpDq9qSvNRZMkXgdsOLSSVc4=" width="507" height="338" scrolling="no" frameborder="0" style="display:inline-block;position:absolute;top:0;left:0;width:100%;height:100%;margin:0;"></iframe>
+        </div>
+        <p style="margin:0;"></p>
+    </div>
+    <ul>
+        <a href="/posts">
+            <button>Read new TIL blogs</button>
+        </a>
+        <a href="/new.html">
+            <button>Create a new TIL blog</button>
+        </a>
+    </ul>
 </body>
+
 </html>
